--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <section class="about container card fade-in">
-    <img src="PHOTO-2025-07-12-10-50-34.jpg" alt="Naveen Photo" class="styled-photo" />
+    <img src="Photo-2025-07.jpeg" alt="Naveen Photo" class="styled-photo" />
     <div>
       <h2>About Me</h2>
       <p>Hi! I'm Naveen, currently interning at Edunet Foundation. I’m passionate about building impactful web apps and constantly improving my tech skills.</p>
